Fix blog thumbnails to not crop/distort images
Changed object-fit from 'cover' to 'contain' so the full image
is displayed without cropping. Images will now show completely
within the square thumbnail container.

--- a/styles.css
+++ b/styles.css
@@ -3518,7 +3518,7 @@ a {
 .note-item-thumb img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .note-item-thumb svg {
@@ -5851,7 +5851,7 @@ a {
     .note-item-thumb img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
     }
 
     .note-item-info {
